<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:background="@null"
        android:text="@string/ok"
        android:layout_below="@+id/create_database_txt_password_repeat"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="80dp"
        android:text="@string/loadfile_cretate_database_dialog_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="18dp"
        android:text="@string/loadfile_cretate_database_dialog_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="18sp"
        tools:text="@string/loadfile_cretate_database_dialog_title"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView2" />

    <Button
        android:id="@+id/create_database_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/ok"
        android:layout_alignBaseline="@+id/button"
        android:layout_alignBottom="@+id/button"
        android:layout_alignEnd="@+id/create_database_txt_password_repeat" />

    <EditText
        android:id="@+id/create_database_txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/loadfile_cretate_database_dialog_database"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/create_database_txt_password_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/create_database_txt_password"
        android:layout_alignStart="@+id/create_database_txt_name"
        android:layout_below="@+id/create_database_txt_password"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/create_database_txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/create_database_txt_name"
        android:layout_alignStart="@+id/create_database_txt_name"
        android:layout_below="@+id/create_database_txt_name"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

</RelativeLayout>