<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.adictosalainformatica.androkeepass.features.loadfile.presentation.view.activity.GeneratePasswordActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="26dp"
        android:text="@string/generatepassword_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:text="@string/loadfile_cretate_database_dialog_title" />

    <CheckBox
        android:id="@+id/generate_password_check_box_upper_case"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="62dp"
        android:layout_marginStart="63dp"
        android:text="@string/generatepassword_upper"
        app:layout_constraintBottom_toBottomOf="@+id/generate_password_check_box_numbers"
        app:layout_constraintLeft_toRightOf="@+id/generate_password_check_box_numbers"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/generate_password_check_box_numbers"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <CheckBox
        android:id="@+id/generate_password_check_box_lower_case"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/generatepassword_lower"
        app:layout_constraintLeft_toLeftOf="@+id/generate_password_check_box_numbers"
        app:layout_constraintTop_toBottomOf="@+id/generate_password_check_box_numbers"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <CheckBox
        android:id="@+id/generate_password_check_box_punctuation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/generatepassword_punctuation"
        app:layout_constraintLeft_toLeftOf="@+id/generate_password_check_box_upper_case"
        app:layout_constraintRight_toRightOf="@+id/generate_password_check_box_upper_case"
        app:layout_constraintTop_toBottomOf="@+id/generate_password_check_box_upper_case"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <CheckBox
        android:id="@+id/generate_password_check_box_numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginTop="164dp"
        android:text="@string/generatepassword_numbers"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/generatepassword_generated_password"
        android:layout_width="163dp"
        android:layout_height="20dp"
        android:layout_marginEnd="58dp"
        android:layout_marginRight="59dp"
        android:layout_marginTop="244dp"
        android:text="@string/generatedpassword_generated_password"
        app:layout_constraintRight_toRightOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:layout_editor_absoluteX="68dp"
        tools:layout_editor_absoluteY="297dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="58dp"
        android:layout_marginTop="29dp"
        android:text="@string/generatepassword_length"
        app:layout_constraintRight_toRightOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/generate_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="39dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="69dp"
        app:layout_constraintTop_toBottomOf="@+id/generate_password_check_box_punctuation"
        android:layout_marginRight="34dp" />

    <SeekBar
        android:id="@+id/generate_password_length"
        android:layout_width="259dp"
        android:layout_height="0dp"
        android:max="8"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/generate_password_check_box_upper_case"
        app:layout_constraintRight_toRightOf="@+id/generate_password_check_box_upper_case"
        android:layout_marginTop="37dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="29dp"
        tools:layout_editor_absoluteX="65dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginRight="1dp"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>
